kuber-gitlab-api/k8s-files/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: login-app
  name: login-app
spec:
  containers:
  - image: gitlab-site.online:5050/root/kuber-gitlab-api:latest
    name: login-app
    ports:
      - containerPort: 8080
  restartPolicy: Always
  imagePullSecrets:
    - name: app-secret
