kuber-gitlab-api/k8s-files/12-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: gitlab-site.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-svc
                port:
                  number: 8080
